// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bulkCreate should display error message when bulkCreate request fails 1`] = `
<SavedObjectsInstaller
  bulkCreate={[Function]}
  savedObjects={
    Array [
      Object {
        "attributes": Object {},
        "id": "1",
        "type": "index-pattern",
      },
    ]
  }
>
  <EuiSteps
    firstStepNumber={1}
    headingElement="p"
    steps={
      Array [
        Object {
          "children": <UNDEFINED>
            <EuiFlexGroup
              alignItems="center"
              component="div"
              direction="row"
              gutterSize="l"
              justifyContent="spaceBetween"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                component="div"
                grow={true}
              >
                <EuiText
                  grow={true}
                >
                  <p>
                    Imports index pattern, visualizations and pre-defined dashboards.
                  </p>
                </EuiText>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiButton
                  color="primary"
                  data-test-subj="loadSavedObjects"
                  fill={false}
                  iconSide="left"
                  isLoading={false}
                  onClick={[Function]}
                  type="button"
                >
                  Load Kibana objects
                </EuiButton>
              </EuiFlexItem>
            </EuiFlexGroup>
            <EuiSpacer
              size="s"
            />
            <EuiCallOut
              color="warning"
              data-test-subj="loadSavedObjects_failed"
              size="m"
              title="Request failed, Error: simulated bulkRequest error"
            />
          </UNDEFINED>,
          "key": "installStep",
          "status": "incomplete",
          "title": "Load Kibana objects",
        },
      ]
    }
  >
    <div
      className="euiSteps"
    >
      <EuiStep
        headingElement="p"
        key="installStep"
        status="incomplete"
        step={1}
        title="Load Kibana objects"
      >
        <div
          className="euiStep"
        >
          <EuiScreenReaderOnly>
            <span
              className="euiScreenReaderOnly"
            >
              Step
            </span>
          </EuiScreenReaderOnly>
          <div
            className="euiStep__circle euiStep__circle--incomplete"
          />
          <EuiTitle
            className="euiStep__title"
            size="s"
          >
            <p
              className="euiTitle euiTitle--small euiStep__title"
            >
              Load Kibana objects
            </p>
          </EuiTitle>
          <div
            className="euiStep__content"
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              direction="row"
              gutterSize="l"
              justifyContent="spaceBetween"
              responsive={true}
              wrap={false}
            >
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <EuiFlexItem
                  component="div"
                  grow={true}
                >
                  <div
                    className="euiFlexItem"
                  >
                    <EuiText
                      grow={true}
                    >
                      <div
                        className="euiText"
                      >
                        <p>
                          Imports index pattern, visualizations and pre-defined dashboards.
                        </p>
                      </div>
                    </EuiText>
                  </div>
                </EuiFlexItem>
                <EuiFlexItem
                  component="div"
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <EuiButton
                      color="primary"
                      data-test-subj="loadSavedObjects"
                      fill={false}
                      iconSide="left"
                      isLoading={false}
                      onClick={[Function]}
                      type="button"
                    >
                      <button
                        className="euiButton euiButton--primary"
                        data-test-subj="loadSavedObjects"
                        onClick={[Function]}
                        type="button"
                      >
                        <span
                          className="euiButton__content"
                        >
                          <span
                            className="euiButton__text"
                          >
                            Load Kibana objects
                          </span>
                        </span>
                      </button>
                    </EuiButton>
                  </div>
                </EuiFlexItem>
              </div>
            </EuiFlexGroup>
            <EuiSpacer
              size="s"
            >
              <div
                className="euiSpacer euiSpacer--s"
              />
            </EuiSpacer>
            <EuiCallOut
              color="warning"
              data-test-subj="loadSavedObjects_failed"
              size="m"
              title="Request failed, Error: simulated bulkRequest error"
            >
              <div
                className="euiCallOut euiCallOut--warning"
                data-test-subj="loadSavedObjects_failed"
              >
                <div
                  className="euiCallOutHeader"
                >
                  <span
                    className="euiCallOutHeader__title"
                  >
                    Request failed, Error: simulated bulkRequest error
                  </span>
                </div>
              </div>
            </EuiCallOut>
          </div>
        </div>
      </EuiStep>
    </div>
  </EuiSteps>
</SavedObjectsInstaller>
`;

exports[`bulkCreate should display success message when bulkCreate is successful 1`] = `
<SavedObjectsInstaller
  bulkCreate={[Function]}
  savedObjects={
    Array [
      Object {
        "attributes": Object {},
        "id": "1",
        "type": "index-pattern",
      },
    ]
  }
>
  <EuiSteps
    firstStepNumber={1}
    headingElement="p"
    steps={
      Array [
        Object {
          "children": <UNDEFINED>
            <EuiFlexGroup
              alignItems="center"
              component="div"
              direction="row"
              gutterSize="l"
              justifyContent="spaceBetween"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                component="div"
                grow={true}
              >
                <EuiText
                  grow={true}
                >
                  <p>
                    Imports index pattern, visualizations and pre-defined dashboards.
                  </p>
                </EuiText>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiButton
                  color="primary"
                  data-test-subj="loadSavedObjects"
                  fill={false}
                  iconSide="left"
                  isLoading={false}
                  onClick={[Function]}
                  type="button"
                >
                  Load Kibana objects
                </EuiButton>
              </EuiFlexItem>
            </EuiFlexGroup>
            <EuiSpacer
              size="s"
            />
            <EuiCallOut
              color="success"
              data-test-subj="loadSavedObjects_success"
              size="m"
              title="1 saved objects successfully added"
            />
          </UNDEFINED>,
          "key": "installStep",
          "status": "complete",
          "title": "Load Kibana objects",
        },
      ]
    }
  >
    <div
      className="euiSteps"
    >
      <EuiStep
        headingElement="p"
        key="installStep"
        status="complete"
        step={1}
        title="Load Kibana objects"
      >
        <div
          className="euiStep"
        >
          <EuiScreenReaderOnly>
            <span
              className="euiScreenReaderOnly"
            >
              Step
            </span>
          </EuiScreenReaderOnly>
          <div
            className="euiStep__circle euiStep__circle--complete"
          >
            <EuiIcon
              className="euiStep__circleIcon"
              color="ghost"
              size="m"
              type="check"
            >
              <check
                className="euiIcon euiIcon--medium euiIcon--ghost euiStep__circleIcon"
                focusable="false"
                height="16"
                style={null}
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              >
                <svg
                  className="euiIcon euiIcon--medium euiIcon--ghost euiStep__circleIcon"
                  focusable="false"
                  height="16"
                  style={null}
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                >
                  <defs>
                    <path
                      d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                      id="check-a"
                    />
                  </defs>
                  <use
                    xlinkHref="#check-a"
                  />
                </svg>
              </check>
            </EuiIcon>
          </div>
          <EuiTitle
            className="euiStep__title"
            size="s"
          >
            <p
              className="euiTitle euiTitle--small euiStep__title"
            >
              Load Kibana objects
            </p>
          </EuiTitle>
          <div
            className="euiStep__content"
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              direction="row"
              gutterSize="l"
              justifyContent="spaceBetween"
              responsive={true}
              wrap={false}
            >
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <EuiFlexItem
                  component="div"
                  grow={true}
                >
                  <div
                    className="euiFlexItem"
                  >
                    <EuiText
                      grow={true}
                    >
                      <div
                        className="euiText"
                      >
                        <p>
                          Imports index pattern, visualizations and pre-defined dashboards.
                        </p>
                      </div>
                    </EuiText>
                  </div>
                </EuiFlexItem>
                <EuiFlexItem
                  component="div"
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <EuiButton
                      color="primary"
                      data-test-subj="loadSavedObjects"
                      fill={false}
                      iconSide="left"
                      isLoading={false}
                      onClick={[Function]}
                      type="button"
                    >
                      <button
                        className="euiButton euiButton--primary"
                        data-test-subj="loadSavedObjects"
                        onClick={[Function]}
                        type="button"
                      >
                        <span
                          className="euiButton__content"
                        >
                          <span
                            className="euiButton__text"
                          >
                            Load Kibana objects
                          </span>
                        </span>
                      </button>
                    </EuiButton>
                  </div>
                </EuiFlexItem>
              </div>
            </EuiFlexGroup>
            <EuiSpacer
              size="s"
            >
              <div
                className="euiSpacer euiSpacer--s"
              />
            </EuiSpacer>
            <EuiCallOut
              color="success"
              data-test-subj="loadSavedObjects_success"
              size="m"
              title="1 saved objects successfully added"
            >
              <div
                className="euiCallOut euiCallOut--success"
                data-test-subj="loadSavedObjects_success"
              >
                <div
                  className="euiCallOutHeader"
                >
                  <span
                    className="euiCallOutHeader__title"
                  >
                    1 saved objects successfully added
                  </span>
                </div>
              </div>
            </EuiCallOut>
          </div>
        </div>
      </EuiStep>
    </div>
  </EuiSteps>
</SavedObjectsInstaller>
`;

exports[`renders 1`] = `
<EuiSteps
  firstStepNumber={1}
  headingElement="p"
  steps={
    Array [
      Object {
        "children": <UNDEFINED>
          <EuiFlexGroup
            alignItems="center"
            component="div"
            direction="row"
            gutterSize="l"
            justifyContent="spaceBetween"
            responsive={true}
            wrap={false}
          >
            <EuiFlexItem
              component="div"
              grow={true}
            >
              <EuiText
                grow={true}
              >
                <p>
                  Imports index pattern, visualizations and pre-defined dashboards.
                </p>
              </EuiText>
            </EuiFlexItem>
            <EuiFlexItem
              component="div"
              grow={false}
            >
              <EuiButton
                color="primary"
                data-test-subj="loadSavedObjects"
                fill={false}
                iconSide="left"
                isLoading={false}
                onClick={[Function]}
                type="button"
              >
                Load Kibana objects
              </EuiButton>
            </EuiFlexItem>
          </EuiFlexGroup>
          <EuiSpacer
            size="s"
          />
        </UNDEFINED>,
        "key": "installStep",
        "status": "incomplete",
        "title": "Load Kibana objects",
      },
    ]
  }
/>
`;
